From Walter Campbell
1.  Updated example.conf for the cryptlinks patch
2.  Fixed a compilation issue with the bogus TS patch
3.  Cleaned up the make depend's
4.  Fixed a core with CRYPT_LINKS and INFO
5.  Use /dev/urandom for the random block in mkkeypair, this is not quite
    as secure, but works on almost all systems
6.  Updated .depend
7.  Changed the patchlevel to 6.1b1

--- a/doc/example.conf
+++ b/doc/example.conf
@@ -1,4 +1,4 @@
-#   $Id: example.conf,v 1.28 2001/06/08 03:58:46 db Exp $
+#   $Id: example.conf,v 1.29 2001/06/08 21:22:46 db Exp $
 #   IRC - Internet Relay Chat, doc/example.conf
 #   Copyright (C) 1992, Bill Wisner
 #
@@ -351,7 +351,10 @@ N:byron.u.washington.edu:gorfyhcnurc:byron.u.washington.edu:2:2
 # server will not make any attempt to connect to it.  Note that since the
 # server is local to me, I am not using hostmasking.
 #
-C:kaja.gi.alaska.edu:llamas:kaja.gi.alaska.edu::2
+# For this link, I'm also going to use compression.  Switch C: for c: to
+# enable compression.
+#
+c:kaja.gi.alaska.edu:llamas:kaja.gi.alaska.edu::2
 N:kaja.gi.alaska.edu:llamas:kaja.gi.alaska.edu::2
 #
 # C and N lines may also use the "user@" combination in the same way as
@@ -360,14 +363,28 @@ N:kaja.gi.alaska.edu:llamas:kaja.gi.alaska.edu::2
 C:wisner@kaja.gi.alaska.edu:llamas:kaja.gi.alaska.edu::2
 N:wisner@kaja.gi.alaska.edu:llamas:kaja.gi.alaska.edu::2
 #
+# IMPORTANT!!!
+#
+# Encrypted server links have slightly changed C: (and c:) line syntax
+# To use encrypted server links, use tools/mkkeypair to create a public
+# and private key pair.  Install the private key as private.key in DPATH,
+# and securely exchange the public key to all your peers.  Create a C/N
+# line pair like the example below
+#
+C:nexus.gi.alaska.edu:@nexus.gi.alaska.edu.pubkey:nexus.gi.alaska.edu::2
+N:nexus.gi.alaska.edu:@nexus.gi.alaska.edu.pubkey:nexus.gi.alaska.edu::2
+#
+# Note that the keyfile must be the same on both the C and N line.
+#
 # Another note is that N line passwords can be optionally encrypted.
 # Look in config.h for more information
 #
 # K: kill a user automatically upon connecting.  This is used to deny
 #    troublesome users access to your server.  The fields are, in order,
 #    hostname (wildcards are allowed), comment, and username.
+#
 K:bugs.cs.wcupa.edu:Don't IRC as root:root
-
+#
 #
 #
 # L: leaf.  This forces the server listed to act as a leaf.  If such a
