- added /usr/pkg and /usr/local paths for openssl detection since i have   systems with those paths used for ssl - NetBSD, etc.

--- a/autoconf/configure.in
+++ b/autoconf/configure.in
@@ -1,4 +1,4 @@
-dnl $Id: configure.in,v 1.14 2001/06/07 18:14:32 davidt Exp $
+dnl $Id: configure.in,v 1.15 2001/06/10 22:28:18 kreator Exp $
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(include/class.h)
 
@@ -56,7 +56,7 @@ if test "X$cf_enable_openssl" != "Xno" ; then
      cf_openssl_basedir="${cf_enable_openssl}"
   else
     dnl Do the auto-probe here.  Check some common directory paths.
-    for dirs in /usr/local/ssl \
+    for dirs in /usr/local/ssl /usr/pkg /usr/local \
                 /usr/local/openssl ; do
       if test -f "${dirs}/include/openssl/opensslv.h" ; then
         cf_openssl_basedir="${dirs}"
