--- a/autoconf/configure.in
+++ b/autoconf/configure.in
@@ -1,4 +1,4 @@
-dnl $Id: configure.in,v 1.15 2001/06/10 22:28:18 kreator Exp $
+dnl $Id: configure.in,v 1.16 2001/06/17 17:27:34 kreator Exp $
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(include/class.h)
 
@@ -186,16 +186,8 @@ int main()
 }
 ], AC_DEFINE(NBLOCK_POSIX) AC_MSG_RESULT( O_NONBLOCK ),, AC_MSG_RESULT( cross compiling ))
 
-AC_MSG_CHECKING(for mmap support)
-AC_TRY_RUN(
-[
-#include <sys/types.h>
-#include <sys/mman.h>
-#include <sys/stat.h>
-int main() {
-  return mmap((caddr_t)0, (off_t)0, PROT_READ, MAP_SHARED, 0, (off_t)0); 
-}
-], AC_DEFINE(USE_MMAP) AC_MSG_RESULT(yes),AC_MSG_RESULT(no), AC_MSG_RESULT( unable to test ))
+dnl try mmap() support
+AC_FUNC_MMAP
 
 AC_TRY_RUN(
 [
