--- a/doc/example.conf
+++ b/doc/example.conf
@@ -1,4 +1,4 @@
-#   $Id: example.conf,v 1.29 2001/06/08 21:22:46 db Exp $
+#   $Id: example.conf,v 1.30 2001/07/04 12:02:36 jdc Exp $
 #   IRC - Internet Relay Chat, doc/example.conf
 #   Copyright (C) 1992, Bill Wisner
 #
@@ -368,11 +368,15 @@ N:wisner@kaja.gi.alaska.edu:llamas:kaja.gi.alaska.edu::2
 # Encrypted server links have slightly changed C: (and c:) line syntax
 # To use encrypted server links, use tools/mkkeypair to create a public
 # and private key pair.  Install the private key as private.key in DPATH,
-# and securely exchange the public key to all your peers.  Create a C/N
-# line pair like the example below
+# and securely exchange the public key to all your peers.  You will also
+# need to negotiate with your peers a suitable encryption cipher (such
+# as BF/256).  Please make sure the keyfile names and the cipher strings
+# are *IDENTICAL* in both the C and the N line.
 #
-C:nexus.gi.alaska.edu:@nexus.gi.alaska.edu.pubkey:nexus.gi.alaska.edu::2
-N:nexus.gi.alaska.edu:@nexus.gi.alaska.edu.pubkey:nexus.gi.alaska.edu::2
+# Create a C/N line pair like the example below:
+#
+C:nexus.gi.alaska.edu:@keys/nexus.keyfile,BF/256:nexus.gi.alaska.edu::2
+N:nexus.gi.alaska.edu:@keys/nexus.keyfile,BF/256:nexus.gi.alaska.edu::2
 #
 # Note that the keyfile must be the same on both the C and N line.
 #
