--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -1,7 +1,7 @@
 #
 # Makefile.in for ircd/src
 #
-# $Id: Makefile.in,v 1.60 2001/06/06 21:35:48 jdc Exp $
+# $Id: Makefile.in,v 1.61 2001/07/04 12:02:43 jdc Exp $
 CC = @CC@
 RM = @RM@
 MKDEP = ${CC} -MM
@@ -39,8 +39,7 @@ SRCS = \
 	m_capab.c \
 	m_close.c \
 	m_connect.c \
-	m_cryptauth.c \
-	m_cryptserv.c \
+	m_cryptlink.c \
 	m_die.c \
 	m_error.c \
 	m_gline.c \
