--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -1,7 +1,7 @@
 #
 # Makefile.in for ircd/src
 #
-# $Id: Makefile.in,v 1.61 2001/07/04 12:02:43 jdc Exp $
+# $Id: Makefile.in,v 1.62 2001/07/04 20:07:32 wcampbel Exp $
 CC = @CC@
 RM = @RM@
 MKDEP = ${CC} -MM
@@ -209,6 +209,9 @@ version.c: version.c.SH
 .PHONY: depend clean distclean
 depend:
 	${MKDEP} ${CPPFLAGS} ${SRCS} > .depend
+
+lint:
+	lint -aacgprxhH $(CPPFLAGS) $(SRCS) >../lint.out
 
 clean:
 	${RM} -f *.o *.exe *~ ircd.core core ircd 
