--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -1,17 +1,14 @@
 #
 # Makefile.in for ircd/src
 #
-# $Id: Makefile.in,v 1.62 2001/07/04 20:07:32 wcampbel Exp $
+# $Id: Makefile.in,v 1.63 2001/07/10 12:40:30 jdc Exp $
 CC = @CC@
 RM = @RM@
 MKDEP = ${CC} -MM
 
-SSL_LIBS     = @SSL_LIBS@
-SSL_INCLUDES = @SSL_INCLUDES@
+IRCDLIBS = @LIBS@ ../zlib/libz.a
 
-IRCDLIBS = @LIBS@ ../zlib/libz.a $(SSL_LIBS)
-
-INCLUDES = -I../include -I../zlib $(SSL_INCLUDES)
+INCLUDES = -I../include -I../zlib
 CPPFLAGS = ${INCLUDES} @CPPFLAGS@
  
 # For developers
@@ -39,7 +36,6 @@ SRCS = \
 	m_capab.c \
 	m_close.c \
 	m_connect.c \
-	m_cryptlink.c \
 	m_die.c \
 	m_error.c \
 	m_gline.c \
