*sigh* 1) NO_HACK_OPS is broken atm, all servers in the network have to    run this, or servers have to send deops, else you get desyncs.    I'll look at this some more later. 2) Don't allow opers to gain ops on splits ever (for now, other networks    might wish to allow this) But allow opers to join channels on splits.

--- a/include/config.h.dist
+++ b/include/config.h.dist
@@ -16,7 +16,7 @@
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
- * $Id: config.h.dist,v 1.104 2001/07/18 02:15:19 lusky Exp $
+ * $Id: config.h.dist,v 1.105 2001/07/22 21:41:04 db Exp $
  */
 #ifndef INCLUDED_config_h
 #define INCLUDED_config_h
@@ -703,8 +703,9 @@
  */
 
 /* If this is defined, hack ops is simply not allowed at all
+ * 
  */
-#define NO_HACK_OPS
+#undef NO_HACK_OPS
 
 /* ----------------- not approved on EFnet section -------------------- 
  *
@@ -1016,6 +1017,10 @@
 #endif
 
 #define REPORT_DLINE_TO_USER
+
+#ifdef NO_JOIN_ON_SPLIT
+#define NO_CHANOPS_ON_SPLIT
+#endif
 
 #if defined(NO_CHANOPS_ON_SPLIT) || defined(NO_JOIN_ON_SPLIT)
 #define NEED_SPLITCODE
