--- a/include/config.h.dist
+++ b/include/config.h.dist
@@ -16,7 +16,7 @@
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
- * $Id: config.h.dist,v 1.107 2001/07/27 22:20:42 leeh Exp $
+ * $Id: config.h.dist,v 1.108 2001/08/04 21:24:32 leeh Exp $
  */
 #ifndef INCLUDED_config_h
 #define INCLUDED_config_h
@@ -703,20 +703,12 @@
  */
 #define LITTLE_I_LINES
 
-/* -----------------  approved on EFnet section -------------------- 
- *
- * if you are not an efnet admin, you might want to undefine some of
- * these.. -db
+/* TS5_ONLY
+ * This will disallow TS3 servers from linking
+ * (see README.HYBRID6.1-CHANGES for more details)
  */
-
-/* If this is defined, hack ops is simply not allowed at all
- * This needs to be network wide to take effect, else you will get desynchs
- * on opless channels.  This will have the side effect of preventing users
- * getting ops themselves via splits, you will probably need some form of
- * services in conjunction with this.   
- */
-#undef NO_HACK_OPS
-
+#undef TS5_ONLY
+   
 /* ----------------- not approved on EFnet section -------------------- 
  *
  * if you are not an efnet admin, you might want to define some of
