- changed some defaults

--- a/include/config.h.dist
+++ b/include/config.h.dist
@@ -16,7 +16,7 @@
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
- * $Id: config.h.dist,v 1.108 2001/08/04 21:24:32 leeh Exp $
+ * $Id: config.h.dist,v 1.109 2001/08/04 22:08:16 leeh Exp $
  */
 #ifndef INCLUDED_config_h
 #define INCLUDED_config_h
@@ -711,8 +711,8 @@
    
 /* ----------------- not approved on EFnet section -------------------- 
  *
- * if you are not an efnet admin, you might want to define some of
- * these.. --fl_
+ * if you are an efnet admin, some of these are not officially supported,
+ * so you may want to undef some -- fl_
  */
 
 /* GLINES - global Kline-like bans
@@ -739,7 +739,7 @@
 /* Ignore bogus timestamps from other servers. Yes this will desync
  * the network, but it will allow chanops to resync with a valid non TS 0
  */
-#undef IGNORE_BOGUS_TS
+#define IGNORE_BOGUS_TS
 
 /* CHANMODE_E
  * /mode #channel +e allows you to add exceptions to bans.
@@ -757,12 +757,12 @@
  * stop server "+e patches" and desyncs across a hub where leaf servers
  * +e lists differ.   --fl_
  */
-#undef CHANMODE_E
+#define CHANMODE_E
 
 /* USE_KNOCK
  * KNOCK allows users to send a "knock" to a +i channel.
  */
-#undef USE_KNOCK
+#define USE_KNOCK
 
 /* -------------- END NOT APPROVED ON EFNET SECTION --------------------- */
 
