- wrapped TS5 in #ifdef's   I need to add doc/ts5.txt later

--- a/include/config.h.dist
+++ b/include/config.h.dist
@@ -16,7 +16,7 @@
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
- * $Id: config.h.dist,v 1.110 2001/08/05 13:07:53 jdc Exp $
+ * $Id: config.h.dist,v 1.111 2001/08/10 08:02:28 leeh Exp $
  */
 #ifndef INCLUDED_config_h
 #define INCLUDED_config_h
@@ -701,6 +701,18 @@
  * can be chanopped, but cannot chanop anyone else.
  */
 #define LITTLE_I_LINES
+
+/* TS5
+ * This will mean the oldest version of a channel will always remain after a
+ * split, whereas TS3 behaviour was to allow any TS in an opless channel.
+ *
+ * This effectively will make splitting servers for ops useless, but
+ * could
+ * cause desync on a mixed TS3/TS5 network.
+ *
+ * See doc/ts5.txt for more details
+ */
+#define TS5
 
 /* TS5_ONLY
  * This will disallow TS3 servers from linking
